fixed sidemenu link when menu is collapsed [ci release]

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -230,3 +230,9 @@ dx-tag-box {
         align-self: center;
     }
 }
+
+[data-sidebar-size="sm"] {
+    .button-container {
+        flex-direction: column;
+    }
+}
